pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart.strong.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart:10:72: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
//   l = /*@ typeArgs=int* */ [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ "hello"];
//                                                                        ^
//
import self as self;
import "dart:core" as core;

static method test() → void {
  core::List<core::int*>* l;
  l = <core::int*>[let final<BottomType> #t1 = invalid-expression "pkg/front_end/testcases/inference/downwards_inference_assignment_statements.dart:10:72: Error: A value of type 'String' can't be assigned to a variable of type 'int'.
  l = /*@ typeArgs=int* */ [/*error:LIST_ELEMENT_TYPE_NOT_ASSIGNABLE*/ \"hello\"];
                                                                       ^" in "hello" as{TypeError} core::int*];
  l = l = <core::int*>[1];
}
static method main() → dynamic {}
